--- a/client/src/index.css
+++ b/client/src/index.css
@@ -181,3 +181,11 @@ body {
 html {
   scroll-behavior: smooth;
 }
+
+.scrollbar-hidden::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hidden {
+  -ms-overflow-style: none; /* IE/Edge */
+  scrollbar-width: none;    /* Firefox */
+}
